--- a/content/posts/externalities.Rmd
+++ b/content/posts/externalities.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Externalities"
 author: ~
-date: '2019-07-16b'
+date: "2019-07-16b"
 categories: []
 tags: []
+modal_id: "modal"
 output:
   blogdown::html_page:
     toc: true
@@ -23,23 +24,23 @@ The infographic here will have clickable elements to the following pages:
 - [Acidification](/modals/externalities/acidification)
  
 ```{r}
-library(infographiq) # remotes::install_github("marinebon/infographiq")
-#devtools::load_all("~/github/infographiq")
-#devtools::install_local("~/github/infographiq")
+# devtools::load_all("~/github/infographiq")
+# devtools::install_local("~/github/infographiq")
+# remotes::install_github("marinebon/infographiq")
+library(infographiq) 
 library(here)
 library(dplyr)
 library(readr)
-library(widgetframe)
+#library(widgetframe)
 
-csv <- here("content/svg_links.csv")
-svg <- "/svg/externalities.svg"
+csv     <- here("content/svg_links.csv")
+svg     <- "externalities.svg"
+pfx     <- "/fk-iea/svg/"
 
 w <- read_csv(csv) %>% 
-  mutate(svg = recode(
-    svg,
-    `/svg/externalities.svg`="/fk-iea/svg/externalities.svg")) %>% 
-  #filter(svg == !!svg) %>% 
-  info_svg(svg)
-frameWidget(w)
+  filter(svg == !!svg) %>% 
+  info_svg(svg, pfx, modal_html_provided=T)
+w
+#frameWidget(w)
 ```
  
