+ front matter. fixes broken shortcode

--- a/content/modals/marine_life/mpas/mpa_vs_not.Rmd
+++ b/content/modals/marine_life/mpas/mpa_vs_not.Rmd
@@ -1,3 +1,11 @@
+---
+title: "MPA Analysis"
+author: ~
+date: '2019-07-23'
+categories: []
+tags: []
+---
+
 ```{r mpa compare imports, include=FALSE}
 library(glue)
 # also uses robis
