--- a/people.Rmd
+++ b/people.Rmd
@@ -4,15 +4,13 @@ params:
   svg: "svg/people.svg"
 ---
 
-This is a placeholder for an infographic page.
-The infographic here will have clickable elements to the following pages:
-
- - [Fishing]({{< relref "/modals/people/fishing" >}})
- - [Land Use]({{< relref "/modals/people/land_use" >}})
- - [Wastewater]({{< relref "/modals/people/wastewater" >}})
- - [Info]({{< relref "/modals/people/info" >}})
-
 ```{r svg, child = '_svg-html_child.Rmd'}
 ```
 
 
+# Attrib
+## Data Compliation
+Kelly Montenero of the NOAA IEA program.
+
+## Graphics
+* CC0 [valve svg](https://svgsilh.com/image/1066626.html) from svgsilh.com
