--- a/modals/habitat.Rmd
+++ b/modals/habitat.Rmd
@@ -19,9 +19,9 @@ Coral Cover has been decreasing due to events and is unable to recover due to co
 This decline over recent decades is easily visible in the following graphs from
 [9B-Ruzicka WQPP Presentation_ May 2019.pptx](https://drive.google.com/open?id=181OYdxt0sXZYVNqz41f6m9KZQMdS2Ex0):
 
-[Overall CREMP Benthic Cover in the Florida Keys – IRMA Effect](habitat_cremp_cover_irma.png)
+![Overall CREMP Benthic Cover in the Florida Keys – IRMA Effect](habitat_cremp_cover_irma.png)
 
-["CREMP & SECREMP Coral Cover](habitat_cremp_cover_events.png)
+!["CREMP & SECREMP Coral Cover](habitat_cremp_cover_events.png)
 
 <!--
 
@@ -54,7 +54,7 @@ In many analyses it makes sense to split the Florida Reef Tract into sub-regions
 The regional subdivision of the reef tract is not well standardized, however.
 The definition of the subregions used here and an explanation of this choice is discussed on the [fk-subdiv page](fk-subidv.md).
 
-[Plots of reef fish indices by subregion across years with strata combined. The units for panel A is abundance (number of individuals), panel B is kilograms per 40,000 km2, panel C is units ranging from 0 (maximally uneven) to 1 (maximally even), and panels D-G are in units of effective number of species. From Hepner, M. E. (2017). Reef Fish Biodiversity in the Florida Keys National Marine Sanctuary.](habitat_mhepner_indicies_by_subregion.png)
+![Plots of reef fish indices by subregion across years with strata combined. The units for panel A is abundance (number of individuals), panel B is kilograms per 40,000 km2, panel C is units ranging from 0 (maximally uneven) to 1 (maximally even), and panels D-G are in units of effective number of species. From Hepner, M. E. (2017). Reef Fish Biodiversity in the Florida Keys National Marine Sanctuary.](habitat_mhepner_indicies_by_subregion.png)
 
 ----------------------------------------------------------------------------
 
