port coral cover

--- a/modals/land_use.Rmd
+++ b/modals/land_use.Rmd
@@ -80,8 +80,9 @@ C-CAP Land Cover Atlas
 
 download: [NOAA: C-CAP FTP](https://coast.noaa.gov/ccapftp/#/)
 
-See also:
-* [Coral Cover Change]({{< relref "/posts/coral-cover-change" >}})
+# Coral Cover Change
+```{r child="land_use_coral_cover_change.Rmd"}
+```
 
 ### Development Forecasts
 University of Florida GeoPlan Center [2060 Development Projections](https://flcpa.databasin.org/datasets/4a1340791089437dae38593f0ef39439)
