--- a/modals/mpas.Rmd
+++ b/modals/mpas.Rmd
@@ -15,6 +15,11 @@ TODO: Lobster study: MPAs can cover a range of life history reqs/habitat
 -->
 
 ### fish in vs out of MPA
+
+```{r child="mpas_mpa_vs_not_cara.Rmd"}
+```
+------------------------------------------------------------------
+
 ```{r child="mpas_mpa_vs_not.Rmd"}
 ```
 
