--- a/modals/hogfish.Rmd
+++ b/modals/hogfish.Rmd
@@ -19,3 +19,4 @@ plotIndicatorTimeSeries(
     'abundance_Lachnolaimus_maximus.csv'
  )
 ```
+This data extracted from [OBIS](obis.org/) using [obis2index](https://github.com/USF-IMARS/obis2index).
