--- a/modals/lionfish.Rmd
+++ b/modals/lionfish.Rmd
@@ -19,3 +19,4 @@ plotIndicatorTimeSeries(
     'abundance_Pterois_volitans.csv'
  )
 ```
+This data extracted from [OBIS](obis.org/) using [obis2index](https://github.com/USF-IMARS/obis2index).
