--- a/modals/yellowtail_snapper.Rmd
+++ b/modals/yellowtail_snapper.Rmd
@@ -19,3 +19,4 @@ plotIndicatorTimeSeries(
     'abundance_Ocyurus_chrysurus.csv'
  )
 ```
+This data extracted from [OBIS](obis.org/) using [obis2index](https://github.com/USF-IMARS/obis2index).
